[package]
name = "fw-verify"
version = "0.1.0"
edition = "2021"
rust-version = "1.93"
description = "Host-side orchestrator for idps-fw two-device WiFi functional tests. Runs on a controller PC (incl. Windows), drives both Android phones over adb and the on-device fw-agent worker, and asserts both enforcement (drop/allow) and detection (firewall_event + upload to idps-server). Pure Rust, no native dependencies."

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
